--- a/NFV_Project/trydjango19/src/templates/Developer.html
+++ b/NFV_Project/trydjango19/src/templates/Developer.html
@@ -165,7 +165,7 @@
                 </div>
                 <div id="navbarContent" class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-left">
-                        <li class="activecustom"><a href="Developer.html">Developer</a></li>
+                        <li class="activecustom"><a href="/nfv/developer">Developer</a></li>
                         <!--<li><a href="Admin.html">Admin</a></li>-->
                         <!--<li><a href="Enterprise.html">Enterprise</a></li>-->                  
                     </ul>
