--- a/NFV_Project/trydjango19/src/templates/Enterprise.html
+++ b/NFV_Project/trydjango19/src/templates/Enterprise.html
@@ -167,7 +167,7 @@
                 <ul class="nav navbar-nav navbar-left">
                     <!--<li><a href="Developer.html">Developer</a></li>-->
                     <!--<li><a href="Admin.html">Admin</a></li>-->
-                    <li class="activecustom"><a href="Enterprise.html">Enterprise</a></li>
+                    <li class="activecustom"><a href="/nfv/enterprise">Enterprise</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li> <a href="/nfv/logout/" style=" font-size: small; color: whitesmoke;  text-align:right;float:right;">Logout</a></li>
