--- a/NFV_Project/trydjango19/src/templates/Admin.html
+++ b/NFV_Project/trydjango19/src/templates/Admin.html
@@ -165,8 +165,9 @@
             <div id="navbarContent" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-left">
                     <!--<li><a href="Developer.html">Developer</a></li>-->
-                    <li class="activecustom"><a href="Admin.html">Admin</a></li>
-                    <li><a href="Enterprise.html">Enterprise</a></li>
+                    <li class="activecustom"><a href="/nfv/admin">Admin</a></li>
+                    <li><a href="/nfv/enterprise">Enterprise</a></li>
+                    <!--<li><a href="Enterprise.html">Enterprise</a></li>-->
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li> <a href="/nfv/logout/" style=" font-size: small; color: whitesmoke;  text-align:right;float:right;">Logout</a></li>
