--- a/NFV_Project/trydjango19/src/templates/Developer.html
+++ b/NFV_Project/trydjango19/src/templates/Developer.html
@@ -146,7 +146,7 @@
                         <span id="loginuserimage" class="glyphicon glyphicon-user" style="font-size: smaller; border: thin; color: #006699; text-align: right; float: right; "></span>
                         <p style="font-size: small; text-align:right;float:right;">&nbsp</p>
                         <label style="font-size: x-small; color: #006699; text-align: right; float: right; " for="username" id="lblLoginUsrName"></label>
-                        <p style="font-size: smaller; text-align: right; float: right; color: #006699; "> Welcome &nbsp {{full_name}} </p
+                        <p style="font-size: smaller; text-align: right; float: right; color: #006699; "> Welcome &nbsp {{full_name}} </p>
                     </h1>
                 </div>
             </div>
