--- a/NFV_Project/trydjango19/src/templates/Admin.html
+++ b/NFV_Project/trydjango19/src/templates/Admin.html
@@ -30,6 +30,32 @@
     <script src="{% static  "js/dataTables.responsive.min.js" %}"></script>   
     <script src="{% static  "js/Admin.js" %}"></script>
     <script src="{% static  "js/Common.js" %}"></script>
+    <script src="{% static  "js/test.json" %}"></script>
+    <script>
+        function loadVNF()
+     {
+            $.getJSON('http://192.168.1.6:8081/admin/listCatalog',function(CatalogResults){
+                var tr;
+                alert('first')
+                alert(CatalogResults.length);
+                for (var i = 0; i < CatalogResults.length; i++)
+                {
+                    alert('entering');
+                    alert(CatalogResults[0].CatalogName );
+                     tr = $('<tr/>');
+                     tr.append("<td>" + CatalogResults[i].CatalogName + "</td>");
+                     tr.append("<td>" + CatalogResults[i].CatalogDesc + "</td>");
+                     tr.append("<td>" + CatalogResults[i].CatalogId + "</td>");
+                     $('table').append(tr);
+                }
+
+            });
+
+        }
+
+
+    </script>
+
 
     <style>
         .img-zoom {
@@ -132,7 +158,7 @@
 
 </head>
 <body>
-
+<form id="frmAdmin" action="nfv/listVNF/">{% csrf_token %}
     <div class="container" style="background-color: #F5F5F0;">
         <img style="float: right; width: 70px; height: 70px" alt="Cinque Terre" src="{% static "nfv_img/comtech.png" %}" />
         <div>
@@ -178,7 +204,7 @@
 
         <div style="background-color: #a0dea0;">
             <br />
-            <table id="VNFDetails" style="border:groove" class="table table-striped table-bordered dt-responsive nowrap pretty" cellspacing="0" width="100%">
+            <table id="VNFDetails" style="border:groove" onload="loadVNF()" class="table table-striped table-bordered dt-responsive nowrap pretty" cellspacing="0" width="100%">
                 <thead>
                     <tr>
                         <th>VNF Name</th>
@@ -293,6 +319,7 @@
         });
         Initialload();
     </script>
-    
+ </form>
 </body>
+
 </html>
