--- a/NFV_Project/trydjango19/src/templates/Admin.html
+++ b/NFV_Project/trydjango19/src/templates/Admin.html
@@ -31,27 +31,106 @@
     <script src="{% static  "js/Admin.js" %}"></script>
     <script src="{% static  "js/Common.js" %}"></script>
     <script src="{% static  "js/test.json" %}"></script>
+
     <script>
-        function loadVNF()
+
+        function Approve()
+        {
+            var catalogs=[];
+            $(".cbox:checked").each(function(){
+
+                catalogs.push($(this).val());
+
+            });
+
+            var approveApi = 'http://192.168.1.18:8001/admin/approve/[' + catalogs.join()+']';
+
+            alert(approveApi);
+
+             $.getJSON(approveApi,function(approveResults){
+            alert(approveResults);
+                 location.reload();
+        });
+        }
+
+        function Reject()
+        {
+            var catalogs=[];
+            $(".cbox:checked").each(function(){
+
+                catalogs.push($(this).val());
+
+
+            });
+
+            var rejectApi = 'http://192.168.1.18:8001/admin/reject/[' + catalogs.join()+']';
+
+            alert(rejectApi);
+
+             $.getJSON(rejectApi,function(rejectResults){
+               alert(rejectResults);
+               location.reload();
+        });
+        }
+
+
+        $(document).ready(function ()
      {
-            $.getJSON('http://192.168.1.6:8081/admin/listCatalog',function(CatalogResults){
-                var tr;
-                alert('first')
-                alert(CatalogResults.length);
+
+         $("#checkAll").click(function() {
+
+
+             $('input:checkbox').not(this).prop('checked', this.checked);
+             //$('input:checkbox').prop('checked', $(this).prop("checked"));
+
+            });
+
+
+            $.getJSON('http://192.168.1.18:8001/admin/listCatalog',function(CatalogResults){
+
+               /* var tr;
+                        <th><input type="checkbox" name="chkhead" id="checkAll" > </th>
+                        <th style="display: none">CatalogID</th>
+                        <th>VNF Name</th>
+                        <th>Description</th>
+                        <th>Files</th>
+                        <th style="width:15%">Preview / Download / Upload / Delete / Publish</th>
+                tr = $('<tr/>');
+                 tr.append("<th>"<input type="checkbox" name="chkhead" id="checkAll" >   "</th>")
+                 tr.append(<th style="display: none">CatalogID</th>)
+                tr.append(<th>VNF Name</th>)
+                tr.append(<th>Description</th>)
+                tr.append(<th>Files</th>)
+                tr.append(<th style="width:15%">Preview / Download / Upload / Delete / Publish</th>)
+*/
                 for (var i = 0; i < CatalogResults.length; i++)
                 {
-                    alert('entering');
-                    alert(CatalogResults[0].CatalogName );
                      tr = $('<tr/>');
-                     tr.append("<td>" + CatalogResults[i].CatalogName + "</td>");
-                     tr.append("<td>" + CatalogResults[i].CatalogDesc + "</td>");
-                     tr.append("<td>" + CatalogResults[i].CatalogId + "</td>");
+                     tr.append("<td align='center'>"+ "<input type='checkbox' name='name1' class='cbox' value='" + CatalogResults[i].CatalogId+ "' /> </td>");
+
+                     tr.append("<td style='display: none'>" + CatalogResults[i].CatalogId + "</td>");
+                     tr.append("<td align='center'>" + CatalogResults[i].CatalogName + "</td>");
+                     tr.append("<td align='center'>" + CatalogResults[i].CatalogDesc + "</td>");
+                     tr.append("<td align='center'>" + CatalogResults[i].VNFD_Filename + "<br>"+ CatalogResults[i].VNF_Config_Filename + "<br>" + CatalogResults[i].VNF_Param_Filename + "</td>");
+                     tr.append("<td>" + "<a data-toggle='modal' data-target='#myModal1' href='#' id='Preview'>" +
+                                "<img src='{% static 'nfv_img/Preview.jpg' %}' height='25px' width='25px' style='border:groove' title='Preview' />"
+                            + "</a>" +
+                            "<img src='{% static 'nfv_img/download.png' %}' height='25px' width='25px' style='border:groove' title='Download' />"
+                                + "<a data-toggle='modal' data-target='#myModal' href='#' id='Upload'>" +
+                                "<img src='{% static 'nfv_img/upload.jpg' %}' height='25px' width='25px' style='border:groove' title='Upload' />"
+                            + "</a>" +
+                            "<img src='{% static 'nfv_img/btn_del.gif' %}' height='25px' width='25px' style='border:groove' title='Delete' />"
+                            + "<img src='{% static 'nfv_img/Publish.png' %}' height='25px' width='25px' style='border:groove' title='Publish' />"
+
+                            + "</td>");
+
                      $('table').append(tr);
+
                 }
 
             });
 
-        }
+        });
 
 
     </script>
@@ -158,7 +237,7 @@
 
 </head>
 <body>
-<form id="frmAdmin" action="nfv/listVNF/">{% csrf_token %}
+<form id="frmAdmin">{% csrf_token %}
     <div class="container" style="background-color: #F5F5F0;">
         <img style="float: right; width: 70px; height: 70px" alt="Cinque Terre" src="{% static "nfv_img/comtech.png" %}" />
         <div>
@@ -171,7 +250,7 @@
                         <span id="loginuserimage" class="glyphicon glyphicon-user" style="font-size: x-small; border: thin; color: #006699; text-align: right; float: right; "></span>
                         <p style="font-size: small; text-align:right;float:right;">&nbsp</p>
                         <label style="font-size: x-small; color: #006699; text-align: right; float: right; " for="username" id="lblLoginUsrName"></label>
-                        <p style="font-size: x-small; text-align: right; float: right; color: black; "> Welcome &nbsp {{full_name}}</p>
+                        <p style="font-size: smaller; text-align: right; float: right; color: #006699; "> Welcome &nbsp Ben</p>
                     </h1>
                 </div>
             </div>
@@ -204,16 +283,18 @@
 
         <div style="background-color: #a0dea0;">
             <br />
-            <table id="VNFDetails" style="border:groove" onload="loadVNF()" class="table table-striped table-bordered dt-responsive nowrap pretty" cellspacing="0" width="100%">
+            <table id="VNFDetails" style="border:groove"  class="table table-striped table-bordered dt-responsive nowrap pretty" cellspacing="0" width="100%">
                 <thead>
                     <tr>
+                        <th><input type="checkbox" name="chkhead" id="checkAll" > </th>
+                        <th style="display: none">CatalogID</th>
                         <th>VNF Name</th>
                         <th>Description</th>
                         <th>Files</th>
-                        <th style="width:10%">Preview / Download / Upload / Delete / Publish</th>
+                        <th style="width:15%">Preview / Download / Upload / Delete / Publish</th>
                     </tr>
                 </thead>
-                <tbody>
+ <!--               <tbody>
                     <tr>
                         <td>OpenWRT</td>
                         <td>Open source firmware that provides router and firewall capabilities</td>
@@ -247,7 +328,7 @@
                            
                         </td>
                     </tr>                   
-                </tbody>
+                </tbody>-->
             </table>
         </div>
         <br />
@@ -308,17 +389,23 @@
                 </div>
             </div>
         </div>
+        <div class="form-group" align="center">
+            <button type="approve" id="btnApprove" value="approve" class="btn btn-success" onclick="Approve()">Approve</button>
+            <button type="reject" value="btnReject" value="reject" class="btn btn-success" onclick="Reject()">Reject </button>
+
+    </div>
 
         <div class="panel panel-heading" style="background-color: #C4C4C0">
             <div class="panel-heading" style="text-align: center">Cognizant copyright &nbsp&nbsp</div>
         </div>
     </div>
-    <script>
+   <!-- <script>
         $(document).ready(function () {
             $('#VNFDetails').DataTable();
         });
         Initialload();
-    </script>
+    </script>-->
+
  </form>
 </body>
 
