--- a/NFV_Project/trydjango19/src/templates/Admin.html
+++ b/NFV_Project/trydjango19/src/templates/Admin.html
@@ -45,7 +45,7 @@
 
             var approveApi = 'http://192.168.1.8:8001/admin/approve/[' + catalogs.join()+']';
 
-            alert(approveApi);
+            //alert(approveApi);
 
              $.getJSON(approveApi,function(approveResults){
             alert(approveResults);
@@ -65,7 +65,7 @@
 
             var rejectApi = 'http://192.168.1.8:8001/admin/reject/[' + catalogs.join()+']';
 
-            alert(rejectApi);
+            //alert(rejectApi);
 
              $.getJSON(rejectApi,function(rejectResults){
                alert(rejectResults);
@@ -123,9 +123,17 @@
                 $("#downloadModal").find(".file:checked").each(function(){
                     url+="&"+$(this).val()+"=true"
                 });
-                alert(url);
+                //alert(url);
                 window.location = url;
             }
+        }
+
+        function deleteCatalog(obj, catalog_id){
+
+            $.getJSON('http://192.168.1.8:8001/admin/delete/'+catalog_id,function(catalogFile){
+                alert("Catalog deleted successfully");
+                location.reload();
+            });
         }
 
 
@@ -193,12 +201,12 @@
                          tr.append("<td>" + "<a data-toggle='modal' data-target='#myModal1' href='#' class='Preview' onclick='loadCatalogFiles(this, "+CatalogResults[i].CatalogId+")'>" +
                                 "<img src='{% static 'nfv_img/Preview.jpg' %}' height='25px' width='25px' style='border:groove' title='Preview' />"
                             + "</a>" +
-                            "<img src='{% static 'nfv_img/download.png' %}' height='25px' width='25px' style='border:groove' title='Download' onclick='popDownload(this, "+CatalogResults[i].CatalogId+")'/>"
+                            "<img src='{% static 'nfv_img/download.png' %}' height='25px' width='25px' style='border:groove;cursor: pointer;' title='Download' onclick='popDownload(this, "+CatalogResults[i].CatalogId+")'/>"
                                 + "<a data-toggle='modal' data-target='#myModal' href='#' id='Upload'>" +
-                                "<img src='{% static 'nfv_img/upload.jpg' %}' height='25px' width='25px' style='border:groove' title='Upload'  onclick='getCatalogId(this, "+CatalogResults[i].CatalogId+")' />"
+                                "<img src='{% static 'nfv_img/upload.jpg' %}' height='25px' width='25px' style='border:groove;cursor: pointer;' title='Upload'  onclick='getCatalogId(this, "+CatalogResults[i].CatalogId+")' />"
                             + "</a>" +
-                            "<img src='{% static 'nfv_img/btn_del.gif' %}' height='25px' width='25px' style='border:groove' title='Delete' />"
-                            + "<img src='{% static 'nfv_img/Publish.png' %}' height='25px' width='25px' style='border:groove' title='Publish' />"
+                            "<img src='{% static 'nfv_img/btn_del.gif' %}' height='25px' width='25px' style='border:groove;cursor: pointer;' title='Delete' onclick='deleteCatalog(this, "+CatalogResults[i].CatalogId+")' />"
+                            + "<img src='{% static 'nfv_img/Publish.png' %}' height='25px' width='25px' style='border:groove;cursor: pointer;' title='Publish' />"
 
                             + "</td>");
 
